<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_bulletins"
        android:icon="@drawable/ic_bulletin"
        android:title="@string/title_bulletins" />

    <item
        android:id="@+id/eventsFragment"
        android:icon="@drawable/ic_events"
        android:title="@string/title_events" />

    <item
        android:id="@+id/messagesFragment"
        android:icon="@drawable/ic_sermons"
        android:title="@string/title_messages" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />
</menu> 